fixed z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,7 @@ footer a {
 .background-theme {
   position: absolute;
   opacity: 50%;
+  z-index: -1000;
 }
 
 .bg-1 {
